--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "export": "next export"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "jquery": "^3.3.1",
     "next": "^5.1.0",
+    "node-rsa": "^1.0.1",
     "randomcolor": "^0.5.3",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
